--- a/package.json
+++ b/package.json
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/stack": "^6.3.25",
+    "@sanity/client": "^6.15.1",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~50.0.8",
+    "expo-blur": "^12.9.2",
+    "expo-image-picker": "~14.7.1",
+    "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
